--- a/_sass/_sponsors.scss
+++ b/_sass/_sponsors.scss
@@ -8,7 +8,7 @@
       flex-basis: 25%;
       width: 80%;
       padding: 10px;
-      margin: 2px;
+      margin: auto 2px;
 
       img {
         width: 100%;
